# lamini-examples

./: .gitignore  Dockerfile  README.md  ft_content.md  ift.md  prompt_engineering.md  pyproject.toml  rag.md  requirements.txt
.github/: test_examples.yaml
01_llama3/: README.md  llama3.py
01_playground/: playground.md
02_eval/: README.md  earnings_meta-llama_Meta-Llama-3.1-8B-Instruct_results.json  eval.py  eval_pipeline.py  load_earnings_call_dataset.py
02_prompt_engineering/: prompt_engineering.md
03_RAG/: build_index.py  directory_loader.py  lamini_index.py  query_engine.py  rag.md  rag.py  rag.sh  requirements.txt  retrieval_augmented_runner.py
03_prompt_tuning/: README.md  generate.py  prompt_engineering.md  spot_check.py
04_IFT/: generate_data.py  generate_data.sh  generate_data_pipeline.py  ift.md  requirements.txt  train.py  train.sh
04_rag_tuning/: README.md  data.jsonl  rag.py
05_data_pipeline/: README.md  generate_data.py
05_json/: json.md  llm_json.py  requirements.txt
06_eval/: a_b_test.py  requirements.txt
06_ift/: README.md  train.py
06_memory_tuning/: Memory_Tuning.ipynb  README.md  tune.py
07_classify/: calibrate.py  classify.md  classify.py  filter.py  llm_classifier.py  requirements.txt  train.py
10_json_output/: README.md  llm_json.py
11_classify/: README.md  calibrate.py  classify.py  filter.py  lamini_classifier.py  requirements.txt
12_slackbot/: README.md  bot-up.sh
classify/: classify-insurance.ipynb  classify.ipynb
code/: directory_loader.py  generate_data.py  query_engine.py  rag.py
icd11/: sample.py  (+2 more)
(+146 files in other folders)
